# spark-learner

./: README.md  conftest.py  main.py  pyproject.toml
.claude/skills/pr-commit/: SKILL.md
data/ecommerce/: customers.json  orders.csv  products.csv
data/finance/: stock_prices.csv
data/logs/: access_logs.txt
docs/: PRD.md
modules/m01_rdd_basics/: README.md  problems.py  solutions.py  test_problems.py
modules/m02_rdd_advanced/: README.md  problems.py  solutions.py  test_problems.py
modules/m03_dataframe_basics/: README.md  problems.py  solutions.py  test_problems.py
modules/m04_dataframe_operations/: README.md  problems.py  solutions.py  test_problems.py
modules/m05_joins_and_aggregations/: README.md  problems.py  solutions.py  test_problems.py
modules/m06_window_functions/: README.md  problems.py  solutions.py  test_problems.py
modules/m07_udf/: README.md  problems.py  solutions.py  test_problems.py
modules/m08_spark_sql/: README.md  problems.py  solutions.py  test_problems.py
modules/m09_partitioning/: README.md  problems.py  solutions.py  test_problems.py
modules/m10_caching_and_persistence/: README.md  problems.py  solutions.py  test_problems.py
modules/m11_shuffle_optimization/: README.md  problems.py  solutions.py  test_problems.py
modules/m12_execution_plans/: README.md  problems.py  solutions.py  test_problems.py
src/helpers/: data_generator.py
